[gd_scene load_steps=14 format=3 uid="uid://dllgbhqqob1o"]

[ext_resource type="Script" path="res://calculator.gd" id="1_05r63"]
[ext_resource type="FontFile" uid="uid://cv0amw6f3f5px" path="res://TF2BUILD.TTF" id="1_uh6jf"]
[ext_resource type="Texture2D" uid="uid://c0e81i1nxo144" path="res://assets/tf2/scout.jpg" id="2_bc3dt"]
[ext_resource type="Texture2D" uid="uid://v61ahko2euqo" path="res://assets/tf2/soldier.jpg" id="3_d4me8"]
[ext_resource type="Texture2D" uid="uid://c36t2whnh11y4" path="res://assets/tf2/pyro.jpg" id="4_yfvl7"]
[ext_resource type="Texture2D" uid="uid://6u02pltj4056" path="res://assets/tf2/demoman.jpeg" id="5_sot3w"]
[ext_resource type="Texture2D" uid="uid://opfdibhoo202" path="res://assets/tf2/heavy.jpg" id="6_vg6vm"]
[ext_resource type="Texture2D" uid="uid://vmqj60cbtsfo" path="res://assets/tf2/engineer.jpeg" id="7_axhho"]
[ext_resource type="Texture2D" uid="uid://eawwbnwoywpx" path="res://assets/tf2/medic.jpg" id="8_a11jh"]
[ext_resource type="Texture2D" uid="uid://cogxdn3ekp6yl" path="res://assets/tf2/sniper.jpg" id="9_4jysx"]
[ext_resource type="Texture2D" uid="uid://bg8ih17j1sdxc" path="res://assets/tf2/spy.jpg" id="10_axobq"]

[sub_resource type="SystemFont" id="SystemFont_ch3yt"]
font_names = PackedStringArray("Wingdings 2")
fallbacks = Array[Font]([ExtResource("1_uh6jf")])

[sub_resource type="SystemFont" id="SystemFont_n1tp2"]

[node name="Calculator" type="Control"]
custom_minimum_size = Vector2(163, 163)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_05r63")

[node name="Screen" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 376.0
offset_bottom = 591.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="ColorRect" type="ColorRect" parent="Screen"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.001
anchor_bottom = 1.0
offset_right = 0.297974
color = Color(0.858824, 0.376471, 0.337255, 1)

[node name="AllComponentsContainer" type="VBoxContainer" parent="Screen/ColorRect"]
layout_mode = 0
offset_left = 1.0
offset_right = 703.0
offset_bottom = 1171.0

[node name="DisplayContainer" type="VBoxContainer" parent="Screen/ColorRect/AllComponentsContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Screen/ColorRect/AllComponentsContainer/DisplayContainer"]
layout_mode = 2
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 50

[node name="WorkAreaContainer" type="VBoxContainer" parent="Screen/ColorRect/AllComponentsContainer/DisplayContainer/MarginContainer"]
layout_mode = 2

[node name="PrevWorkArea" type="Label" parent="Screen/ColorRect/AllComponentsContainer/DisplayContainer/MarginContainer/WorkAreaContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_ch3yt")
theme_override_font_sizes/font_size = 35
horizontal_alignment = 2

[node name="WorkArea" type="Label" parent="Screen/ColorRect/AllComponentsContainer/DisplayContainer/MarginContainer/WorkAreaContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_ch3yt")
theme_override_font_sizes/font_size = 60
horizontal_alignment = 2

[node name="AllButtons" type="VBoxContainer" parent="Screen/ColorRect/AllComponentsContainer"]
layout_mode = 2

[node name="TopButtons" type="GridContainer" parent="Screen/ColorRect/AllComponentsContainer/AllButtons"]
layout_mode = 2
size_flags_horizontal = 4
columns = 4

[node name="clear" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(163, 163)
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "CE"
icon_alignment = 1

[node name="negate" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(163, 163)
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "±"

[node name="delete" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(163, 163)
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "←"

[node name="divide" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(163, 163)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "÷"
icon_alignment = 1

[node name="1" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(163, 163)
layout_mode = 2
icon = ExtResource("2_bc3dt")

[node name="2" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(163, 163)
layout_mode = 2
icon = ExtResource("3_d4me8")

[node name="3" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(163, 163)
layout_mode = 2
icon = ExtResource("4_yfvl7")

[node name="subtract" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(163, 163)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "-"

[node name="4" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(163, 163)
layout_mode = 2
icon = ExtResource("5_sot3w")

[node name="5" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(163, 163)
layout_mode = 2
icon = ExtResource("6_vg6vm")
expand_icon = true

[node name="6" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(163, 163)
layout_mode = 2
icon = ExtResource("7_axhho")
expand_icon = true

[node name="add" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(163, 163)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "+"

[node name="7" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(163, 163)
layout_mode = 2
icon = ExtResource("8_a11jh")
expand_icon = true

[node name="8" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(163, 163)
layout_mode = 2
icon = ExtResource("9_4jysx")

[node name="9" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(163, 163)
layout_mode = 2
icon = ExtResource("10_axobq")

[node name="multiply" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons"]
custom_minimum_size = Vector2(163, 163)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_n1tp2")
theme_override_font_sizes/font_size = 90
text = "x"
icon_alignment = 2

[node name="BottomButtons" type="HBoxContainer" parent="Screen/ColorRect/AllComponentsContainer/AllButtons"]
layout_mode = 2
size_flags_horizontal = 4

[node name="0" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/BottomButtons"]
custom_minimum_size = Vector2(326, 163)
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "0"

[node name="decimal" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/BottomButtons"]
custom_minimum_size = Vector2(163, 163)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "."

[node name="solve" type="Button" parent="Screen/ColorRect/AllComponentsContainer/AllButtons/BottomButtons"]
custom_minimum_size = Vector2(163, 163)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "="

[connection signal="pressed" from="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons/clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons/negate" to="." method="_on_negate_pressed"]
[connection signal="pressed" from="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons/divide" to="." method="_on_divide_pressed"]
[connection signal="pressed" from="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons/subtract" to="." method="_on_subtract_pressed"]
[connection signal="pressed" from="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons/add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="Screen/ColorRect/AllComponentsContainer/AllButtons/TopButtons/multiply" to="." method="_on_multiply_pressed"]
[connection signal="pressed" from="Screen/ColorRect/AllComponentsContainer/AllButtons/BottomButtons/decimal" to="." method="_on_decimal_pressed"]
[connection signal="pressed" from="Screen/ColorRect/AllComponentsContainer/AllButtons/BottomButtons/solve" to="." method="_on_solve_pressed"]
